# Google-ADK-Skills

./: .gitignore  .mcp.json  CLAUDE.md  DEPLOYMENT.md  QUICKSTART.md  README.md  UPCOMING.md  install.sh  package.json  pyproject.toml  requirements.txt  skills.sh.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: adk-skills-ci.yml
.planning/: STATE.md
.ralph/: @AGENT.md  @fix_plan.md  PROMPT.md  README.md
.ralph/specs/: plugin-requirements.md
adk-python/: requirements.txt
adk-python/.agents/: root_agent.yaml
adk-python/callbacks/: __init__.py  logging.py  security.py
adk-python/tools/: __init__.py  model_tools.py
adk-runtime/agents/: agent_builder.agent.yaml  architect.agent.yaml  debugger.agent.yaml  model_router.agent.yaml  root_agent.yaml  style_checker.agent.yaml  workflow_designer.agent.yaml
adk_bidi/: __init__.py  __main__.py  agent.py  cli.py  config.py
adk_bidi/agents/: __init__.py  autonomous_agent.py  bidi_agent.py  multimodal_agent.py  voice_agent.py
adk_bidi/core/: __init__.py  live_session.py  streaming_config.py  websocket_server.py
adk_bidi/examples/: __init__.py
adk_bidi/memory/: __init__.py  persistent_store.py  semantic_memory.py  shared_memory.py  working_memory.py
adk_bidi/orchestration/: __init__.py  router.py  supervisor.py  swarm.py
agents/: agent-builder.md  architect.md  architecture-advisor.md  code-improver.md  code-validator.md  debugger.md  git-ops.md  git_ops.agent.yaml  sample_creator.agent.yaml  setup.agent.yaml  setup.md  style-checker.md  workflow-builder.md  workflow-designer.md  workflow_builder.agent.yaml
commands/: config.md  docs.md  examples.md  init.md  status.md  test.md
docs/adk-course/: ADK Eval Guide.md  ADK Production Guideline.md  ADK model Armor.md  ADK-auth-and-authorization.md  Basic ADK core.md  MAS-Memory-RAG.md  adk-continues-learning.md  adk-memory-based-rag.md  adk-model-armor-security-guide.md  adk-security-hardening.md
docs/adk-docs/: CLAUDE.md  README.md
hooks/: hooks.json
legacy-skills/: adk-autonomous-agent.md  adk-bidi-multi-agent.md  adk-deployment-manager.md  adk-memory-manager.md  adk-multi-agent-orchestrator.md  adk-persona-builder.md  adk-rag-builder.md
mcp_servers/: CATALOG.md
skills/: adk-adaptive-agent-generator.md  adk-autonomous-agent.md  adk-bidi-multi-agent.md  adk-deployment-manager.md  adk-domain-expert-builder.md  adk-langgraph-orchestrator.md  adk-mcp-integration.md  adk-memory-manager.md  adk-multi-agent-orchestrator.md  adk-persona-builder.md  adk-pinecone-rag.md  adk-rag-builder.md  adk-skill-dispatcher.md
skills/adk-adaptive-memory/: SKILL.md
skills/adk-agent-lifecycle/: SKILL.md
skills/adk-agent-testing/: SKILL.md
skills/adk-agentic-prod-workflows/: SKILL.md
skills/adk-agents/: SKILL.md
skills/adk-autonomous-agent/: SKILL.md
skills/adk-backend/: SKILL.md
skills/adk-bidi-live/: SKILL.md
skills/adk-callback-patterns/: SKILL.md
skills/adk-custom-agent-builder/: SKILL.md
skills/adk-deployment/: SKILL.md
skills/adk-domain-expert/: SKILL.md
skills/adk-enterprise-multi-agent/: SKILL.md
skills/adk-grounding-patterns/: SKILL.md
skills/adk-integration-tools/: SKILL.md
skills/adk-knowledge-systems/: SKILL.md
skills/adk-langgraph/: SKILL.md
skills/adk-litellm/: SKILL.md
tests/: conftest.py  test_skill_validation.py
(+207 files in other folders)
